crates/vexor-compiler/tests/golden/error/output/fn_dup_param.err
Error: evaluation error
   ╭─[ input:2:1 ]
   │
 2 │ fn sq(x, x) = x * x
   │ ─────────┬─────────  
   │          ╰─────────── function sq has duplicate parameter names
───╯
